Fix: tour popup too wide

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -91,10 +91,18 @@
     background-color: #F2F4F7;
   }
 
+  .ant-tour{
+    width: 40%;
+  }
+
   @media (max-width: 992px){
     body{
       max-height: 100dvh;
       overflow-y: scroll;
+    }
+
+    .ant-tour{
+      width: 80%;
     }
   }
   
